@@ -2,7 +2,7 @@ Title: Survival Analysis
 Priority: recommended
 Package: survival
 Version: 3.3-2
-Date: 2022-04-06
+Date: 2022-04-12
 Depends: R (>= 3.5.0)
 Imports: graphics, Matrix, methods, splines, stats, utils
 LazyData: Yes
