@@ -4,6 +4,8 @@
   \itemize{
     \item Error in concordance(fit, newdata) if newdata had missing
     values: the derived x and y could be different lengths.
+    \item Add test cases for the (rather difficult) case of a
+    multi-state coxph model that has shared hazards, predicted survival
 }}
 
 \section{Changes in version 3.3-1}{
